--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"tailwindcss": "^3.4.10",
 		"typescript": "~5.4.0",
 		"typescript-eslint": "^8.4.0",
+		"unplugin-auto-import": "^0.18.2",
+		"unplugin-vue-components": "^0.27.4",
 		"vite": "^5.3.1",
 		"vite-plugin-vue-devtools": "^7.3.1",
 		"vue-tsc": "^2.0.21"
